// Original file: src/protos/zetasql/parser/ast_enums.proto


// Original file: src/protos/zetasql/parser/ast_enums.proto

export enum _zetasql_ASTSpannerInterleaveClauseEnums_Type {
  NOT_SET = 0,
  IN = 1,
  IN_PARENT = 2,
}

export interface ASTSpannerInterleaveClauseEnums {
}

export interface ASTSpannerInterleaveClauseEnums__Output {
}
