// Original file: src/protos/zetasql/parser/ast_enums.proto


// Original file: src/protos/zetasql/parser/ast_enums.proto

export enum _zetasql_ASTTemplatedParameterTypeEnums_TemplatedTypeKind {
  UNINITIALIZED = 1,
  ANY_TYPE = 2,
  ANY_PROTO = 3,
  ANY_ENUM = 4,
  ANY_STRUCT = 5,
  ANY_ARRAY = 6,
  ANY_TABLE = 7,
}

export interface ASTTemplatedParameterTypeEnums {
}

export interface ASTTemplatedParameterTypeEnums__Output {
}
