// Original file: src/snowflake/protos/zetasql/parser/ast_enums.proto


// Original file: src/snowflake/protos/zetasql/parser/ast_enums.proto

export const _zetasql_ASTAnySomeAllOpEnums_Op = {
  kUninitialized: 1,
  kAny: 2,
  kSome: 3,
  kAll: 4,
} as const;

export type _zetasql_ASTAnySomeAllOpEnums_Op =
  | 'kUninitialized'
  | 1
  | 'kAny'
  | 2
  | 'kSome'
  | 3
  | 'kAll'
  | 4

export type _zetasql_ASTAnySomeAllOpEnums_Op__Output = typeof _zetasql_ASTAnySomeAllOpEnums_Op[keyof typeof _zetasql_ASTAnySomeAllOpEnums_Op]

export interface ASTAnySomeAllOpEnums {
}

export interface ASTAnySomeAllOpEnums__Output {
}
