// Original file: src/protos/zetasql/parser/ast_enums.proto


// Original file: src/protos/zetasql/parser/ast_enums.proto

export enum _zetasql_ASTForeignKeyActionsEnums_Action {
  NO_ACTION = 0,
  RESTRICT = 1,
  CASCADE = 2,
  SET_NULL = 3,
}

export interface ASTForeignKeyActionsEnums {
}

export interface ASTForeignKeyActionsEnums__Output {
}
