// Original file: src/protos/zetasql/parser/ast_enums.proto


// Original file: src/protos/zetasql/parser/ast_enums.proto

export enum _zetasql_ASTGeneratedColumnInfoEnums_StoredMode {
  NON_STORED = 0,
  STORED = 1,
  STORED_VOLATILE = 2,
}

export interface ASTGeneratedColumnInfoEnums {
}

export interface ASTGeneratedColumnInfoEnums__Output {
}
