// Original file: src/protos/zetasql/parser/ast_enums.proto


// Original file: src/protos/zetasql/parser/ast_enums.proto

export enum _zetasql_ASTJoinEnums_JoinHint {
  NO_JOIN_HINT = 0,
  HASH = 1,
  LOOKUP = 2,
}

// Original file: src/protos/zetasql/parser/ast_enums.proto

export enum _zetasql_ASTJoinEnums_JoinType {
  DEFAULT_JOIN_TYPE = 0,
  COMMA = 1,
  CROSS = 2,
  FULL = 3,
  INNER = 4,
  LEFT = 5,
  RIGHT = 6,
}

export interface ASTJoinEnums {
}

export interface ASTJoinEnums__Output {
}
