// Original file: src/protos/zetasql/parser/ast_enums.proto


// Original file: src/protos/zetasql/parser/ast_enums.proto

export enum _zetasql_ASTMergeWhenClauseEnums_MatchType {
  NOT_SET = 0,
  MATCHED = 1,
  NOT_MATCHED_BY_SOURCE = 2,
  NOT_MATCHED_BY_TARGET = 3,
}

export interface ASTMergeWhenClauseEnums {
}

export interface ASTMergeWhenClauseEnums__Output {
}
