// Original file: src/protos/zetasql/parser/ast_enums.proto


// Original file: src/protos/zetasql/parser/ast_enums.proto

export enum _zetasql_ASTSelectAsEnums_AsMode {
  NOT_SET = 0,
  STRUCT = 1,
  VALUE = 2,
  TYPE_NAME = 3,
}

export interface ASTSelectAsEnums {
}

export interface ASTSelectAsEnums__Output {
}
