// Original file: src/protos/zetasql/parser/ast_enums.proto


// Original file: src/protos/zetasql/parser/ast_enums.proto

export const _zetasql_ASTSpannerInterleaveClauseEnums_Type = {
  NOT_SET: 0,
  IN: 1,
  IN_PARENT: 2,
} as const;

export type _zetasql_ASTSpannerInterleaveClauseEnums_Type =
  | 'NOT_SET'
  | 0
  | 'IN'
  | 1
  | 'IN_PARENT'
  | 2

export type _zetasql_ASTSpannerInterleaveClauseEnums_Type__Output = typeof _zetasql_ASTSpannerInterleaveClauseEnums_Type[keyof typeof _zetasql_ASTSpannerInterleaveClauseEnums_Type]

export interface ASTSpannerInterleaveClauseEnums {
}

export interface ASTSpannerInterleaveClauseEnums__Output {
}
