// Original file: src/snowflake/protos/zetasql/parser/ast_enums.proto


// Original file: src/snowflake/protos/zetasql/parser/ast_enums.proto

export const _zetasql_ASTTransactionReadWriteModeEnums_Mode = {
  INVALID: 0,
  READ_ONLY: 1,
  READ_WRITE: 2,
} as const;

export type _zetasql_ASTTransactionReadWriteModeEnums_Mode =
  | 'INVALID'
  | 0
  | 'READ_ONLY'
  | 1
  | 'READ_WRITE'
  | 2

export type _zetasql_ASTTransactionReadWriteModeEnums_Mode__Output = typeof _zetasql_ASTTransactionReadWriteModeEnums_Mode[keyof typeof _zetasql_ASTTransactionReadWriteModeEnums_Mode]

export interface ASTTransactionReadWriteModeEnums {
}

export interface ASTTransactionReadWriteModeEnums__Output {
}
