// Original file: src/zetasql-snowflake/protos/zetasql/parser/ast_enums.proto


// Original file: src/zetasql-snowflake/protos/zetasql/parser/ast_enums.proto

export const _zetasql_ASTUnpivotClauseEnums_NullFilter = {
  kUnspecified: 1,
  kInclude: 2,
  kExclude: 3,
} as const;

export type _zetasql_ASTUnpivotClauseEnums_NullFilter =
  | 'kUnspecified'
  | 1
  | 'kInclude'
  | 2
  | 'kExclude'
  | 3

export type _zetasql_ASTUnpivotClauseEnums_NullFilter__Output = typeof _zetasql_ASTUnpivotClauseEnums_NullFilter[keyof typeof _zetasql_ASTUnpivotClauseEnums_NullFilter]

export interface ASTUnpivotClauseEnums {
}

export interface ASTUnpivotClauseEnums__Output {
}
