// Original file: src/protos/zetasql/parser/ast_enums.proto


// Original file: src/protos/zetasql/parser/ast_enums.proto

export enum _zetasql_ASTAnySomeAllOpEnums_Op {
  kUninitialized = 1,
  kAny = 2,
  kSome = 3,
  kAll = 4,
}

export interface ASTAnySomeAllOpEnums {
}

export interface ASTAnySomeAllOpEnums__Output {
}
