// Original file: src/protos/zetasql/parser/ast_enums.proto


// Original file: src/protos/zetasql/parser/ast_enums.proto

export enum _zetasql_ASTCreateStatementEnums_Scope {
  DEFAULT_SCOPE = 0,
  PRIVATE = 1,
  PUBLIC = 2,
  TEMPORARY = 3,
}

// Original file: src/protos/zetasql/parser/ast_enums.proto

export enum _zetasql_ASTCreateStatementEnums_SqlSecurity {
  SQL_SECURITY_UNSPECIFIED = 0,
  SQL_SECURITY_DEFINER = 1,
  SQL_SECURITY_INVOKER = 2,
}

export interface ASTCreateStatementEnums {
}

export interface ASTCreateStatementEnums__Output {
}
