// Original file: src/protos/zetasql/parser/ast_enums.proto


// Original file: src/protos/zetasql/parser/ast_enums.proto

export enum _zetasql_ASTFunctionCallEnums_NullHandlingModifier {
  DEFAULT_NULL_HANDLING = 0,
  IGNORE_NULLS = 1,
  RESPECT_NULLS = 2,
}

export interface ASTFunctionCallEnums {
}

export interface ASTFunctionCallEnums__Output {
}
