// Original file: src/protos/zetasql/parser/ast_enums.proto


// Original file: src/protos/zetasql/parser/ast_enums.proto

export enum _zetasql_ASTTransactionReadWriteModeEnums_Mode {
  INVALID = 0,
  READ_ONLY = 1,
  READ_WRITE = 2,
}

export interface ASTTransactionReadWriteModeEnums {
}

export interface ASTTransactionReadWriteModeEnums__Output {
}
