// Original file: src/protos/zetasql/parser/ast_enums.proto


// Original file: src/protos/zetasql/parser/ast_enums.proto

export enum _zetasql_ASTUnaryExpressionEnums_Op {
  NOT_SET = 0,
  NOT = 1,
  BITWISE_NOT = 2,
  MINUS = 3,
  PLUS = 4,
}

export interface ASTUnaryExpressionEnums {
}

export interface ASTUnaryExpressionEnums__Output {
}
