// Original file: src/protos/zetasql/parser/ast_enums.proto


// Original file: src/protos/zetasql/parser/ast_enums.proto

export enum _zetasql_ASTUnpivotClauseEnums_NullFilter {
  kUnspecified = 1,
  kInclude = 2,
  kExclude = 3,
}

export interface ASTUnpivotClauseEnums {
}

export interface ASTUnpivotClauseEnums__Output {
}
