// Original file: protos/zetasql/resolved_ast/resolved_ast_enums.proto


// Original file: protos/zetasql/resolved_ast/resolved_ast_enums.proto

export enum _zetasql_ResolvedNonScalarFunctionCallBaseEnums_NullHandlingModifier {
  DEFAULT_NULL_HANDLING = 0,
  IGNORE_NULLS = 1,
  RESPECT_NULLS = 2,
}

export interface ResolvedNonScalarFunctionCallBaseEnums {
}

export interface ResolvedNonScalarFunctionCallBaseEnums__Output {
}
