// Original file: protos/zetasql/resolved_ast/resolved_ast_enums.proto


// Original file: protos/zetasql/resolved_ast/resolved_ast_enums.proto

export enum _zetasql_ResolvedWindowFrameExprEnums_BoundaryType {
  UNBOUNDED_PRECEDING = 0,
  OFFSET_PRECEDING = 1,
  CURRENT_ROW = 2,
  OFFSET_FOLLOWING = 3,
  UNBOUNDED_FOLLOWING = 4,
}

export interface ResolvedWindowFrameExprEnums {
}

export interface ResolvedWindowFrameExprEnums__Output {
}
