// Original file: src/zetasql/protos/zetasql/parser/ast_enums.proto


// Original file: src/zetasql/protos/zetasql/parser/ast_enums.proto

export const _zetasql_ASTGeneratedColumnInfoEnums_StoredMode = {
  NON_STORED: 0,
  STORED: 1,
  STORED_VOLATILE: 2,
} as const;

export type _zetasql_ASTGeneratedColumnInfoEnums_StoredMode =
  | 'NON_STORED'
  | 0
  | 'STORED'
  | 1
  | 'STORED_VOLATILE'
  | 2

export type _zetasql_ASTGeneratedColumnInfoEnums_StoredMode__Output = typeof _zetasql_ASTGeneratedColumnInfoEnums_StoredMode[keyof typeof _zetasql_ASTGeneratedColumnInfoEnums_StoredMode]

export interface ASTGeneratedColumnInfoEnums {
}

export interface ASTGeneratedColumnInfoEnums__Output {
}
